[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemos-codereview"
version = "0.1.0a0"
description = "Python orchestrator for Mnemos: memory graph, agents, and LLM coordination."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Abhishek Jadhav" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.2.5",
  "anthropic>=0.25",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "rq>=1.16",
  "redis>=5.0",
  "httpx>=0.27",
  "structlog>=24.1",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-redis>=4.6",
]
languages = [
  "tree-sitter-python>=0.21",
  # tree-sitter-ruby, tree-sitter-typescript, etc. land as contributors add them.
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"codereview.llm.prompts" = ["**/*.md", "**/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
# UP017 rewrites ``datetime.timezone.utc`` -> ``datetime.UTC`` (Py3.11+). The
# project targets 3.11 but our dev sandbox sometimes runs 3.10; tests keep
# the compat spelling so both run locally. Real code uses ``dt.UTC``.
"tests/**" = ["B", "RUF", "UP017", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["rq.*", "tree_sitter.*", "tree_sitter_python.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
